# polaris

./: .gitignore  Cargo.toml  README.md  TODO.md
example/: add.pol  sanity.pol
polaris-cli/: Cargo.toml
polaris-cli/src/: build_cmd.rs  cli.rs  compile_cmd.rs  config.rs  log.rs  main.rs
polaris-core/: Cargo.toml
polaris-core/src/: ast.rs  closure.rs  compile.rs  dependency.rs  desugar.rs  diagnostic.rs  effect.rs  intrinsics.rs  lib.rs  lifetime.rs  log.rs  module.rs  monomorphise.rs  parse.rs  pattern.rs  symbol.rs  typecheck.rs  types.rs
polaris-core/src/ast/: ast.rs  diagnostic.rs  pass.rs  visit.rs
polaris-core/src/compile/: compile.rs
polaris-core/src/parse/: ast.rs  diagnostic.rs  error.rs  lexer.rs  parse.rs  token.rs
test/: sanity.plrs  sanity.pls  sanity.pol
test/closure/src/: main.pol
test/closure_test/: polaris.toml
test/imports/: polaris.toml
test/imports/src/: main.pol
test/lifetime_analysis/: polaris.toml
test/lifetime_analysis/src/: main.pol
test/literal_coercion/: Polaris.toml
test/literal_coercion/src/: main.pol
test/modules/: mod1.pls  mod2.pls  mod3.pls  mod4.pls
test/monomorphisation/: polaris.toml
test/monomorphisation/src/: main.pol
test/pattern_validation/: polaris.toml
test/pattern_validation/src/: exhaustive_patterns.pol  main.pol  non_exhaustive_patterns.pol
test/sanity/src/: main.pol
test/type/: polaris.toml
test/type/src/: main.pol
