[package]
name = "polaris"
version = "0.1.0"
edition = "2024"

[dependencies]
polaris-core = { path = "../polaris-core" }
atty = "0.2.14"
clap = { version = "4.5.42", features = ["derive"] }
termcolor = "1.4.1"
tracing = "0.1.41"
codespan-reporting = "0.12.0"
crossbeam-channel = "0.5.15"
anyhow = "1.0.98"
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread"] }
rayon = "1.10.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
